--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,17 +39,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation(name: 'Offlinesdk_1.1.1', ext: 'aar')
+    implementation(name: 'Offlinesdk_1.1.2', ext: 'aar')
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     // Add dependency crashlytics
-
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    // (Recommended) Add Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.6.0'
     // Check for v11.4.2 or higher
     implementation 'com.google.firebase:firebase-core:17.2.0'
-
-    // (Recommended) Add Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
-
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
 
 
     // Required -- JUnit 4 framework
@@ -101,8 +99,6 @@ dependencies {
     implementation 'com.google.ads.mediation:facebook:5.8.0.0'
 }
 
-apply plugin: 'io.fabric'
-// Apply the Performance Monitoring plugin
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.firebase.firebase-perf'
-
 apply plugin: 'com.google.gms.google-services'
